fix compatibility from jdk 17 to jdk 1.8