@@ -1,13 +1,11 @@
 package com.joymutlu.apiexplorer.strategy;
 
 import com.intellij.psi.PsiMethod;
-import com.intellij.psi.PsiParameter;
 import com.joymutlu.apiexplorer.model.ExploreContext;
 import com.joymutlu.apiexplorer.util.StringUtils;
 
-import java.lang.reflect.Method;
-
 import static java.util.Arrays.stream;
+import static java.util.stream.Collectors.toList;
 
 public class MethodCallGenerationStrategy implements CodeGenerationStrategy {
     @Override
@@ -20,7 +18,7 @@ public class MethodCallGenerationStrategy implements CodeGenerationStrategy {
                 .append(StringUtils.getArgsString(
                         stream(method.getParameterList().getParameters())
                         .map(param -> param.getType().toString())
-                        .toList()))
+                        .collect(toList())))
                 .append(");")
                 .append("\n")
                 .append(ctx.getIndent())
